; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ofed/libmlx5/extr_qp.c_mlx5_post_recv.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ofed/libmlx5/extr_qp.c_mlx5_post_recv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ibv_qp = type { i64, i64 }
%struct.ibv_recv_wr = type { i32, i32, %struct.TYPE_5__*, %struct.ibv_recv_wr* }
%struct.TYPE_5__ = type { i32 }
%struct.mlx5_qp = type { i32, %struct.TYPE_6__, i8**, %struct.TYPE_4__* }
%struct.TYPE_6__ = type { i32, i32, i32, i32, i32, i32* }
%struct.TYPE_4__ = type { i32 }
%struct.mlx5_wqe_data_seg = type { i64, i8*, i64 }
%struct.mlx5_rwqe_sig = type { i32 }

@ENOMEM = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@MLX5_INVALID_LKEY = common dso_local global i32 0, align 4
@IBV_QPT_RAW_PACKET = common dso_local global i64 0, align 8
@IBV_QPS_RTR = common dso_local global i64 0, align 8
@MLX5_RCV_DBR = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mlx5_post_recv(%struct.ibv_qp* %0, %struct.ibv_recv_wr* %1, %struct.ibv_recv_wr** %2) #0 {
  %4 = alloca %struct.ibv_qp*, align 8
  %5 = alloca %struct.ibv_recv_wr*, align 8
  %6 = alloca %struct.ibv_recv_wr**, align 8
  %7 = alloca %struct.mlx5_qp*, align 8
  %8 = alloca %struct.mlx5_wqe_data_seg*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca %struct.mlx5_rwqe_sig*, align 8
  store %struct.ibv_qp* %0, %struct.ibv_qp** %4, align 8
  store %struct.ibv_recv_wr* %1, %struct.ibv_recv_wr** %5, align 8
  store %struct.ibv_recv_wr** %2, %struct.ibv_recv_wr*** %6, align 8
  %15 = load %struct.ibv_qp*, %struct.ibv_qp** %4, align 8
  %16 = call %struct.mlx5_qp* @to_mqp(%struct.ibv_qp* %15)
  store %struct.mlx5_qp* %16, %struct.mlx5_qp** %7, align 8
  store i32 0, i32* %9, align 4
  %17 = load %struct.mlx5_qp*, %struct.mlx5_qp** %7, align 8
  %18 = getelementptr inbounds %struct.mlx5_qp, %struct.mlx5_qp* %17, i32 0, i32 1
  %19 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %18, i32 0, i32 4
  %20 = call i32 @mlx5_spin_lock(i32* %19)
  %21 = load %struct.mlx5_qp*, %struct.mlx5_qp** %7, align 8
  %22 = getelementptr inbounds %struct.mlx5_qp, %struct.mlx5_qp* %21, i32 0, i32 1
  %23 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 8
  %25 = load %struct.mlx5_qp*, %struct.mlx5_qp** %7, align 8
  %26 = getelementptr inbounds %struct.mlx5_qp, %struct.mlx5_qp* %25, i32 0, i32 1
  %27 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %26, i32 0, i32 1
  %28 = load i32, i32* %27, align 4
  %29 = sub nsw i32 %28, 1
  %30 = and i32 %24, %29
  store i32 %30, i32* %11, align 4
  store i32 0, i32* %10, align 4
  br label %31

31:                                               ; preds = %190, %3
  %32 = load %struct.ibv_recv_wr*, %struct.ibv_recv_wr** %5, align 8
  %33 = icmp ne %struct.ibv_recv_wr* %32, null
  br i1 %33, label %34, label %196

34:                                               ; preds = %31
  %35 = load %struct.mlx5_qp*, %struct.mlx5_qp** %7, align 8
  %36 = getelementptr inbounds %struct.mlx5_qp, %struct.mlx5_qp* %35, i32 0, i32 1
  %37 = load i32, i32* %10, align 4
  %38 = load %struct.mlx5_qp*, %struct.mlx5_qp** %7, align 8
  %39 = getelementptr inbounds %struct.mlx5_qp, %struct.mlx5_qp* %38, i32 0, i32 3
  %40 = load %struct.TYPE_4__*, %struct.TYPE_4__** %39, align 8
  %41 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %40, i32 0, i32 0
  %42 = load i32, i32* %41, align 4
  %43 = call i32 @to_mcq(i32 %42)
  %44 = call i32 @mlx5_wq_overflow(%struct.TYPE_6__* %36, i32 %37, i32 %43)
  %45 = call i64 @unlikely(i32 %44)
  %46 = icmp ne i64 %45, 0
  br i1 %46, label %47, label %51

47:                                               ; preds = %34
  %48 = load i32, i32* @ENOMEM, align 4
  store i32 %48, i32* %9, align 4
  %49 = load %struct.ibv_recv_wr*, %struct.ibv_recv_wr** %5, align 8
  %50 = load %struct.ibv_recv_wr**, %struct.ibv_recv_wr*** %6, align 8
  store %struct.ibv_recv_wr* %49, %struct.ibv_recv_wr** %50, align 8
  br label %197

51:                                               ; preds = %34
  %52 = load %struct.ibv_recv_wr*, %struct.ibv_recv_wr** %5, align 8
  %53 = getelementptr inbounds %struct.ibv_recv_wr, %struct.ibv_recv_wr* %52, i32 0, i32 0
  %54 = load i32, i32* %53, align 8
  %55 = load %struct.mlx5_qp*, %struct.mlx5_qp** %7, align 8
  %56 = getelementptr inbounds %struct.mlx5_qp, %struct.mlx5_qp* %55, i32 0, i32 1
  %57 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %56, i32 0, i32 2
  %58 = load i32, i32* %57, align 8
  %59 = icmp sgt i32 %54, %58
  %60 = zext i1 %59 to i32
  %61 = call i64 @unlikely(i32 %60)
  %62 = icmp ne i64 %61, 0
  br i1 %62, label %63, label %67

63:                                               ; preds = %51
  %64 = load i32, i32* @EINVAL, align 4
  store i32 %64, i32* %9, align 4
  %65 = load %struct.ibv_recv_wr*, %struct.ibv_recv_wr** %5, align 8
  %66 = load %struct.ibv_recv_wr**, %struct.ibv_recv_wr*** %6, align 8
  store %struct.ibv_recv_wr* %65, %struct.ibv_recv_wr** %66, align 8
  br label %197

67:                                               ; preds = %51
  %68 = load %struct.mlx5_qp*, %struct.mlx5_qp** %7, align 8
  %69 = load i32, i32* %11, align 4
  %70 = call %struct.mlx5_wqe_data_seg* @get_recv_wqe(%struct.mlx5_qp* %68, i32 %69)
  store %struct.mlx5_wqe_data_seg* %70, %struct.mlx5_wqe_data_seg** %8, align 8
  %71 = load %struct.mlx5_wqe_data_seg*, %struct.mlx5_wqe_data_seg** %8, align 8
  %72 = bitcast %struct.mlx5_wqe_data_seg* %71 to %struct.mlx5_rwqe_sig*
  store %struct.mlx5_rwqe_sig* %72, %struct.mlx5_rwqe_sig** %14, align 8
  %73 = load %struct.mlx5_qp*, %struct.mlx5_qp** %7, align 8
  %74 = getelementptr inbounds %struct.mlx5_qp, %struct.mlx5_qp* %73, i32 0, i32 0
  %75 = load i32, i32* %74, align 8
  %76 = call i64 @unlikely(i32 %75)
  %77 = icmp ne i64 %76, 0
  br i1 %77, label %78, label %88

78:                                               ; preds = %67
  %79 = load %struct.mlx5_rwqe_sig*, %struct.mlx5_rwqe_sig** %14, align 8
  %80 = load %struct.mlx5_qp*, %struct.mlx5_qp** %7, align 8
  %81 = getelementptr inbounds %struct.mlx5_qp, %struct.mlx5_qp* %80, i32 0, i32 1
  %82 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %81, i32 0, i32 3
  %83 = load i32, i32* %82, align 4
  %84 = shl i32 1, %83
  %85 = call i32 @memset(%struct.mlx5_rwqe_sig* %79, i32 0, i32 %84)
  %86 = load %struct.mlx5_wqe_data_seg*, %struct.mlx5_wqe_data_seg** %8, align 8
  %87 = getelementptr inbounds %struct.mlx5_wqe_data_seg, %struct.mlx5_wqe_data_seg* %86, i32 1
  store %struct.mlx5_wqe_data_seg* %87, %struct.mlx5_wqe_data_seg** %8, align 8
  br label %88

88:                                               ; preds = %78, %67
  store i32 0, i32* %12, align 4
  store i32 0, i32* %13, align 4
  br label %89

89:                                               ; preds = %123, %88
  %90 = load i32, i32* %12, align 4
  %91 = load %struct.ibv_recv_wr*, %struct.ibv_recv_wr** %5, align 8
  %92 = getelementptr inbounds %struct.ibv_recv_wr, %struct.ibv_recv_wr* %91, i32 0, i32 0
  %93 = load i32, i32* %92, align 8
  %94 = icmp slt i32 %90, %93
  br i1 %94, label %95, label %126

95:                                               ; preds = %89
  %96 = load %struct.ibv_recv_wr*, %struct.ibv_recv_wr** %5, align 8
  %97 = getelementptr inbounds %struct.ibv_recv_wr, %struct.ibv_recv_wr* %96, i32 0, i32 2
  %98 = load %struct.TYPE_5__*, %struct.TYPE_5__** %97, align 8
  %99 = load i32, i32* %12, align 4
  %100 = sext i32 %99 to i64
  %101 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %98, i64 %100
  %102 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %101, i32 0, i32 0
  %103 = load i32, i32* %102, align 4
  %104 = icmp ne i32 %103, 0
  %105 = xor i1 %104, true
  %106 = zext i1 %105 to i32
  %107 = call i64 @unlikely(i32 %106)
  %108 = icmp ne i64 %107, 0
  br i1 %108, label %109, label %110

109:                                              ; preds = %95
  br label %123

110:                                              ; preds = %95
  %111 = load %struct.mlx5_wqe_data_seg*, %struct.mlx5_wqe_data_seg** %8, align 8
  %112 = load i32, i32* %13, align 4
  %113 = add nsw i32 %112, 1
  store i32 %113, i32* %13, align 4
  %114 = sext i32 %112 to i64
  %115 = getelementptr inbounds %struct.mlx5_wqe_data_seg, %struct.mlx5_wqe_data_seg* %111, i64 %114
  %116 = load %struct.ibv_recv_wr*, %struct.ibv_recv_wr** %5, align 8
  %117 = getelementptr inbounds %struct.ibv_recv_wr, %struct.ibv_recv_wr* %116, i32 0, i32 2
  %118 = load %struct.TYPE_5__*, %struct.TYPE_5__** %117, align 8
  %119 = load i32, i32* %12, align 4
  %120 = sext i32 %119 to i64
  %121 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %118, i64 %120
  %122 = call i32 @set_data_ptr_seg(%struct.mlx5_wqe_data_seg* %115, %struct.TYPE_5__* %121, i32 0)
  br label %123

123:                                              ; preds = %110, %109
  %124 = load i32, i32* %12, align 4
  %125 = add nsw i32 %124, 1
  store i32 %125, i32* %12, align 4
  br label %89

126:                                              ; preds = %89
  %127 = load i32, i32* %13, align 4
  %128 = load %struct.mlx5_qp*, %struct.mlx5_qp** %7, align 8
  %129 = getelementptr inbounds %struct.mlx5_qp, %struct.mlx5_qp* %128, i32 0, i32 1
  %130 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %129, i32 0, i32 2
  %131 = load i32, i32* %130, align 8
  %132 = icmp slt i32 %127, %131
  br i1 %132, label %133, label %151

133:                                              ; preds = %126
  %134 = load %struct.mlx5_wqe_data_seg*, %struct.mlx5_wqe_data_seg** %8, align 8
  %135 = load i32, i32* %13, align 4
  %136 = sext i32 %135 to i64
  %137 = getelementptr inbounds %struct.mlx5_wqe_data_seg, %struct.mlx5_wqe_data_seg* %134, i64 %136
  %138 = getelementptr inbounds %struct.mlx5_wqe_data_seg, %struct.mlx5_wqe_data_seg* %137, i32 0, i32 2
  store i64 0, i64* %138, align 8
  %139 = load i32, i32* @MLX5_INVALID_LKEY, align 4
  %140 = call i8* @htobe32(i32 %139)
  %141 = load %struct.mlx5_wqe_data_seg*, %struct.mlx5_wqe_data_seg** %8, align 8
  %142 = load i32, i32* %13, align 4
  %143 = sext i32 %142 to i64
  %144 = getelementptr inbounds %struct.mlx5_wqe_data_seg, %struct.mlx5_wqe_data_seg* %141, i64 %143
  %145 = getelementptr inbounds %struct.mlx5_wqe_data_seg, %struct.mlx5_wqe_data_seg* %144, i32 0, i32 1
  store i8* %140, i8** %145, align 8
  %146 = load %struct.mlx5_wqe_data_seg*, %struct.mlx5_wqe_data_seg** %8, align 8
  %147 = load i32, i32* %13, align 4
  %148 = sext i32 %147 to i64
  %149 = getelementptr inbounds %struct.mlx5_wqe_data_seg, %struct.mlx5_wqe_data_seg* %146, i64 %148
  %150 = getelementptr inbounds %struct.mlx5_wqe_data_seg, %struct.mlx5_wqe_data_seg* %149, i32 0, i32 0
  store i64 0, i64* %150, align 8
  br label %151

151:                                              ; preds = %133, %126
  %152 = load %struct.mlx5_qp*, %struct.mlx5_qp** %7, align 8
  %153 = getelementptr inbounds %struct.mlx5_qp, %struct.mlx5_qp* %152, i32 0, i32 0
  %154 = load i32, i32* %153, align 8
  %155 = call i64 @unlikely(i32 %154)
  %156 = icmp ne i64 %155, 0
  br i1 %156, label %157, label %171

157:                                              ; preds = %151
  %158 = load %struct.mlx5_qp*, %struct.mlx5_qp** %7, align 8
  %159 = load %struct.mlx5_rwqe_sig*, %struct.mlx5_rwqe_sig** %14, align 8
  %160 = load %struct.ibv_recv_wr*, %struct.ibv_recv_wr** %5, align 8
  %161 = getelementptr inbounds %struct.ibv_recv_wr, %struct.ibv_recv_wr* %160, i32 0, i32 0
  %162 = load i32, i32* %161, align 8
  %163 = add nsw i32 %162, 1
  %164 = shl i32 %163, 4
  %165 = load %struct.mlx5_qp*, %struct.mlx5_qp** %7, align 8
  %166 = getelementptr inbounds %struct.mlx5_qp, %struct.mlx5_qp* %165, i32 0, i32 1
  %167 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %166, i32 0, i32 0
  %168 = load i32, i32* %167, align 8
  %169 = and i32 %168, 65535
  %170 = call i32 @set_sig_seg(%struct.mlx5_qp* %158, %struct.mlx5_rwqe_sig* %159, i32 %164, i32 %169)
  br label %171

171:                                              ; preds = %157, %151
  %172 = load %struct.ibv_recv_wr*, %struct.ibv_recv_wr** %5, align 8
  %173 = getelementptr inbounds %struct.ibv_recv_wr, %struct.ibv_recv_wr* %172, i32 0, i32 1
  %174 = load i32, i32* %173, align 4
  %175 = load %struct.mlx5_qp*, %struct.mlx5_qp** %7, align 8
  %176 = getelementptr inbounds %struct.mlx5_qp, %struct.mlx5_qp* %175, i32 0, i32 1
  %177 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %176, i32 0, i32 5
  %178 = load i32*, i32** %177, align 8
  %179 = load i32, i32* %11, align 4
  %180 = sext i32 %179 to i64
  %181 = getelementptr inbounds i32, i32* %178, i64 %180
  store i32 %174, i32* %181, align 4
  %182 = load i32, i32* %11, align 4
  %183 = add nsw i32 %182, 1
  %184 = load %struct.mlx5_qp*, %struct.mlx5_qp** %7, align 8
  %185 = getelementptr inbounds %struct.mlx5_qp, %struct.mlx5_qp* %184, i32 0, i32 1
  %186 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %185, i32 0, i32 1
  %187 = load i32, i32* %186, align 4
  %188 = sub nsw i32 %187, 1
  %189 = and i32 %183, %188
  store i32 %189, i32* %11, align 4
  br label %190

190:                                              ; preds = %171
  %191 = load i32, i32* %10, align 4
  %192 = add nsw i32 %191, 1
  store i32 %192, i32* %10, align 4
  %193 = load %struct.ibv_recv_wr*, %struct.ibv_recv_wr** %5, align 8
  %194 = getelementptr inbounds %struct.ibv_recv_wr, %struct.ibv_recv_wr* %193, i32 0, i32 3
  %195 = load %struct.ibv_recv_wr*, %struct.ibv_recv_wr** %194, align 8
  store %struct.ibv_recv_wr* %195, %struct.ibv_recv_wr** %5, align 8
  br label %31

196:                                              ; preds = %31
  br label %197

197:                                              ; preds = %196, %63, %47
  %198 = load i32, i32* %10, align 4
  %199 = call i64 @likely(i32 %198)
  %200 = icmp ne i64 %199, 0
  br i1 %200, label %201, label %239

201:                                              ; preds = %197
  %202 = load i32, i32* %10, align 4
  %203 = load %struct.mlx5_qp*, %struct.mlx5_qp** %7, align 8
  %204 = getelementptr inbounds %struct.mlx5_qp, %struct.mlx5_qp* %203, i32 0, i32 1
  %205 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %204, i32 0, i32 0
  %206 = load i32, i32* %205, align 8
  %207 = add nsw i32 %206, %202
  store i32 %207, i32* %205, align 8
  %208 = call i32 (...) @udma_to_device_barrier()
  %209 = load %struct.ibv_qp*, %struct.ibv_qp** %4, align 8
  %210 = getelementptr inbounds %struct.ibv_qp, %struct.ibv_qp* %209, i32 0, i32 0
  %211 = load i64, i64* %210, align 8
  %212 = load i64, i64* @IBV_QPT_RAW_PACKET, align 8
  %213 = icmp eq i64 %211, %212
  br i1 %213, label %214, label %220

214:                                              ; preds = %201
  %215 = load %struct.ibv_qp*, %struct.ibv_qp** %4, align 8
  %216 = getelementptr inbounds %struct.ibv_qp, %struct.ibv_qp* %215, i32 0, i32 1
  %217 = load i64, i64* %216, align 8
  %218 = load i64, i64* @IBV_QPS_RTR, align 8
  %219 = icmp slt i64 %217, %218
  br label %220

220:                                              ; preds = %214, %201
  %221 = phi i1 [ false, %201 ], [ %219, %214 ]
  %222 = xor i1 %221, true
  %223 = zext i1 %222 to i32
  %224 = call i64 @likely(i32 %223)
  %225 = icmp ne i64 %224, 0
  br i1 %225, label %226, label %238

226:                                              ; preds = %220
  %227 = load %struct.mlx5_qp*, %struct.mlx5_qp** %7, align 8
  %228 = getelementptr inbounds %struct.mlx5_qp, %struct.mlx5_qp* %227, i32 0, i32 1
  %229 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %228, i32 0, i32 0
  %230 = load i32, i32* %229, align 8
  %231 = and i32 %230, 65535
  %232 = call i8* @htobe32(i32 %231)
  %233 = load %struct.mlx5_qp*, %struct.mlx5_qp** %7, align 8
  %234 = getelementptr inbounds %struct.mlx5_qp, %struct.mlx5_qp* %233, i32 0, i32 2
  %235 = load i8**, i8*** %234, align 8
  %236 = load i64, i64* @MLX5_RCV_DBR, align 8
  %237 = getelementptr inbounds i8*, i8** %235, i64 %236
  store i8* %232, i8** %237, align 8
  br label %238

238:                                              ; preds = %226, %220
  br label %239

239:                                              ; preds = %238, %197
  %240 = load %struct.mlx5_qp*, %struct.mlx5_qp** %7, align 8
  %241 = getelementptr inbounds %struct.mlx5_qp, %struct.mlx5_qp* %240, i32 0, i32 1
  %242 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %241, i32 0, i32 4
  %243 = call i32 @mlx5_spin_unlock(i32* %242)
  %244 = load i32, i32* %9, align 4
  ret i32 %244
}

declare dso_local %struct.mlx5_qp* @to_mqp(%struct.ibv_qp*) #1

declare dso_local i32 @mlx5_spin_lock(i32*) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @mlx5_wq_overflow(%struct.TYPE_6__*, i32, i32) #1

declare dso_local i32 @to_mcq(i32) #1

declare dso_local %struct.mlx5_wqe_data_seg* @get_recv_wqe(%struct.mlx5_qp*, i32) #1

declare dso_local i32 @memset(%struct.mlx5_rwqe_sig*, i32, i32) #1

declare dso_local i32 @set_data_ptr_seg(%struct.mlx5_wqe_data_seg*, %struct.TYPE_5__*, i32) #1

declare dso_local i8* @htobe32(i32) #1

declare dso_local i32 @set_sig_seg(%struct.mlx5_qp*, %struct.mlx5_rwqe_sig*, i32, i32) #1

declare dso_local i64 @likely(i32) #1

declare dso_local i32 @udma_to_device_barrier(...) #1

declare dso_local i32 @mlx5_spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
